<resources>
    <string name="app_name">ArtShop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="email">E-mail</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="items">Items</string>
    <string name="apple_description">Apple description</string>
    <string name="car_description">Car description</string>
    <string name="cat_description">Cat description</string>
    <string name="scissor_description">Scissor description</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="item_title_placeholder">Item Title Placeholder</string>
    <string name="item_description_placeholder">Item Description Placeholder</string>
    <string name="item_price_placeholder">123 asd</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="view">View</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>

    <string-array name="item_names">
        <item>Apple</item>
        <item>Apple 1</item>
        <item>Apple 2</item>
        <item>Apple 3</item>
        <item>Apple 4</item>
        <item>Apple 5</item>
        <item>Car</item>
        <item>Car 1</item>
        <item>Car 2</item>
        <item>Car 3</item>
        <item>Car 4</item>
        <item>Car 5</item>
        <item>Cat</item>
        <item>Cat 1</item>
        <item>Cat 2</item>
        <item>Cat 3</item>
        <item>Cat 4</item>
        <item>Cat 5</item>
        <item>Scissors</item>
        <item>Woman</item>
    </string-array>

    <string-array name="item_descriptions">
        <item>Apple description</item>
        <item>Apple 1 description</item>
        <item>Apple 2 description</item>
        <item>Apple 3 description</item>
        <item>Apple 4 description</item>
        <item>Apple 5 description</item>
        <item>Car description</item>
        <item>Car 1 description</item>
        <item>Car 2 description</item>
        <item>Car 3 description</item>
        <item>Car 4 description</item>
        <item>Car 5 description</item>
        <item>Cat description</item>
        <item>Cat 1 description</item>
        <item>Cat 2 description</item>
        <item>Cat 3 description</item>
        <item>Cat 4 description</item>
        <item>Cat 5 description</item>
        <item>Scissors description</item>
        <item>Woman description</item>
    </string-array>

    <array name="item_ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>1.5</item>
        <item>2.5</item>
        <item>3.5</item>
        <item>4.5</item>
        <item>1.3</item>
        <item>2.4</item>
        <item>3.5</item>
        <item>3.7</item>
        <item>2.4</item>
        <item>4.2</item>
        <item>4.9</item>
        <item>3.8</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>5</item>
    </array>

    <array name="item_images">
        <item>@drawable/apple</item>
        <item>@drawable/apple_1</item>
        <item>@drawable/apple_2</item>
        <item>@drawable/apple_3</item>
        <item>@drawable/apple_4</item>
        <item>@drawable/apple_5</item>
        <item>@drawable/car</item>
        <item>@drawable/car_1</item>
        <item>@drawable/car_2</item>
        <item>@drawable/car_3</item>
        <item>@drawable/car_4</item>
        <item>@drawable/car_5</item>
        <item>@drawable/cat</item>
        <item>@drawable/cat_1</item>
        <item>@drawable/cat_2</item>
        <item>@drawable/cat_3</item>
        <item>@drawable/cat_4</item>
        <item>@drawable/cat_5</item>
        <item>@drawable/scissors</item>
        <item>@drawable/woman</item>
    </array>

    <array name="item_prices">
        <item>100 Dv</item>
        <item>110 Dv</item>
        <item>120 Dv</item>
        <item>130 Dv</item>
        <item>210 Dv</item>
        <item>50 Dv</item>
        <item>125 Dv</item>
        <item>123 Dv</item>
        <item>425 Dv</item>
        <item>135 Dv</item>
        <item>136 Dv</item>
        <item>254 Dv</item>
        <item>146 Dv</item>
        <item>75 Dv</item>
        <item>148 Dv</item>
        <item>257 Dv</item>
        <item>167 Dv</item>
        <item>352 Dv</item>
        <item>480 Dv</item>
        <item>500 Dv</item>
    </array>

</resources>