<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopListActivity"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shopListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_vert"
            android:layout_marginTop="@dimen/default_margin_vert"
            android:minHeight="@dimen/default_min_height"
            android:padding="@dimen/title_padding"
            android:text="@string/items"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginTop="@dimen/default_margin_vert"
            android:layout_marginBottom="@dimen/default_margin_vert"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/apple"
                android:layout_width="@dimen/default_item_height"
                android:layout_height="@dimen/default_item_height"
                app:srcCompat="@drawable/illustration_apple_3" />

            <TextView
                android:id="@+id/appleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/default_margin_vert"
                android:layout_marginBottom="@dimen/default_margin_vert"
                android:minHeight="@dimen/default_min_height"
                android:padding="@dimen/title_padding"
                android:text="@string/apple_description"
                android:textSize="@dimen/title_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginBottom="@dimen/default_margin_vert"
            android:layout_marginTop="@dimen/default_margin_vert"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/car"
                android:layout_width="@dimen/default_item_height"
                android:layout_height="@dimen/default_item_height"
                app:srcCompat="@drawable/illustration_car_1"/>

            <TextView
                android:id="@+id/carTextView"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_vert"
                android:layout_marginTop="@dimen/default_margin_vert"
                android:minHeight="@dimen/default_min_height"
                android:padding="@dimen/title_padding"
                android:text="@string/car_description"
                android:textSize="@dimen/title_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginBottom="@dimen/default_margin_vert"
            android:layout_marginTop="@dimen/default_margin_vert"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cat"
                android:layout_width="@dimen/default_item_height"
                android:layout_height="@dimen/default_item_height"
                app:srcCompat="@drawable/illustration_cat"/>

            <TextView
                android:id="@+id/catTextView"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_vert"
                android:layout_marginTop="@dimen/default_margin_vert"
                android:minHeight="@dimen/default_min_height"
                android:padding="@dimen/title_padding"
                android:text="@string/cat_description"
                android:textSize="@dimen/title_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_item_height"
            android:layout_marginBottom="@dimen/default_margin_vert"
            android:layout_marginTop="@dimen/default_margin_vert"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/scissors"
                android:layout_width="@dimen/default_item_height"
                android:layout_height="@dimen/default_item_height"
                app:srcCompat="@drawable/illustration_scissors"/>

            <TextView
                android:id="@+id/scissorsTextView"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_vert"
                android:layout_marginTop="@dimen/default_margin_vert"
                android:minHeight="@dimen/default_min_height"
                android:padding="@dimen/title_padding"
                android:text="@string/scissor_description"
                android:textSize="@dimen/title_text_size"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>